--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
     <title>LiveSitter - Real-time Safety Alerts</title>
     <meta name="description" content="Prevent workplace incidents with real-time safety monitoring. Advanced AI-powered alerts for construction sites and industrial environments." />
     <meta name="author" content="LiveSitter" />
-
-    <meta property="og:title" content="LiveSitter - Real-time Safety Alerts" />
-    <meta property="og:description" content="Prevent workplace incidents with real-time safety monitoring. Advanced AI-powered alerts for construction sites and industrial environments." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
 
   <body>
